--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,8 @@
 <router-outlet></router-outlet>
+<!--<h1>Welcome to monkey shelter!</h1>-->
 
-<!--<table mat-table [dataSource]="listOfMonkeys" class="mat-elevation-z8">
 
-  &lt;!&ndash;- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" &ndash;&gt;
 
-  &lt;!&ndash; Position Column &ndash;&gt;
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="age">
-    <th mat-header-cell *matHeaderCellDef> Age </th>
-    <td mat-cell *matCellDef="let element"> {{element.Age}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.Weight}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="eyeColor">
-    <th mat-header-cell *matHeaderCellDef> Eye Color </th>
-    <td mat-cell *matCellDef="let element"> {{element.EyeColor}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="species">
-    <th mat-header-cell *matHeaderCellDef> Species </th>
-    <td mat-cell *matCellDef="let element"> {{element.Species}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="registered">
-    <th mat-header-cell *matHeaderCellDef> Registered </th>
-    <td mat-cell *matCellDef="let element"> {{element.Registered}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="favoriteFruit">
-    <th mat-header-cell *matHeaderCellDef> Favorite Fruit </th>
-    <td mat-cell *matCellDef="let element"> {{element.FavoriteFruit}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>-->
-
+<!--<nav>-->
+<!--  <a routerLink="/create-monkey">Add Monkey</a>-->
+<!--</nav>-->
