Added readme & top navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
+<mat-toolbar color="primary">
+  <a mat-button routerLink="/create-monkey">Add Monkey</a>
+  <a mat-button routerLink="/update-monkey">Update Monkey</a>
+  <a mat-button routerLink="/delete-monkey">Remove Monkey</a>
+  <a mat-button routerLink="/report-species">Species Report</a>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
-<!--<h1>Welcome to monkey shelter!</h1>-->
-
-
-
-<!--<nav>-->
-<!--  <a routerLink="/create-monkey">Add Monkey</a>-->
-<!--</nav>-->
